--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "Laboratório de aplicação Web com backend baseado no JSON Server",
   "main": "index.js",
   "scripts": {
-    "start": "json-server --watch ./db/db.json -s ./public"
+   "start": "node index.js"
   },
   "keywords": [],
   "author": "Rommel Vieira Carneiro",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.17.1",
     "json-server": "^0.17.3"
   }
